--- a/index.html
+++ b/index.html
@@ -6,10 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>dom doma dom</h1>
+    <header>
+        <h1>dom doma dom header</h1>
+    </header>
+    <main>
+        <section>
+            <h1>dom - document object modle</h1>
+            <ul>
+                <li>home</li>
+                <li>classes</li>
+                <li>about</li>
+                <li>contuct us</li>
+            </ul>
+        </section>
+        <section>
+            <h1 id="book-title">book name</h1>
+            <ul>
+                <li class="book-name">bangla</li>
+                <li class="book-name">English</li>
+                <li class="book-name">English</li>
+                <li class="book-name">Mathematics</li>
+                <li class="book-name">Science</li>
+            </ul>
+        </section>
+        <section>
+            <h1>My Friendes name</h1>
+            <ul>
+                <li>Salim</li>
+                <li>Sohel</li>
+                <li>Rana</li>
+                <li>Alamin</li>
+            </ul>
+        </section>
+    </main>
+    <script src="app.js"></script>
+
 </body>
 
 </html>
