--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>dom doma dom header</h1>
     </header>
-    <main>
+    <main id="main-container">
         <section>
             <h1>dom - document object modle</h1>
             <ul>
@@ -35,7 +35,7 @@
         </section>
         <section>
             <h1>My Friendes name</h1>
-            <ul>
+            <ul id="friends">
                 <li>Salim</li>
                 <li>Sohel</li>
                 <li>Rana</li>
@@ -44,6 +44,7 @@
         </section>
     </main>
     <script src="app.js"></script>
+    <script src="appand.js"></script>
 
 </body>
 
